fixed navbar navigation on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -28,8 +28,15 @@
     border: none !important;
     margin: auto;
   }
+  .nav-link {
+    padding: 3px !important;
+  }
   .navbar-nav {
     align-items: center;
+    flex-direction: row;
+  }
+  .navbar {
+    height: 11vh;
   }
 }
 
