--- a/scss/style.scss
+++ b/scss/style.scss
@@ -199,12 +199,16 @@ height: 100%;
 .btn-primary {
 background-color: $primary-color;
 border-color: $primary-color;
+  &:hover {
+    background-color: darken($primary-color, 10%);
+    border: none;
+  }
+  &:active {
+    background-color: darken($primary-color, 10%) !important;
+    border: none;
+  }
 }
 
-.btn-primary:hover {
-  background-color: darken($primary-color, 10%);
-  border: none;
-}
 
 .img-thumbnail {
   padding: 0;
